# purson-lang

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  README.md  plang.kdev4  purson-lang.kdev4
.kdev4/: lang.kdev4  plang.kdev4
bear/: CMakeLists.txt  MPInt.pur  algorithms.pur  document.cpp  document.hpp  editor.cpp  editor.hpp  gl.pur  main.cpp  main.qml  math.pur  monoidFont.qrc  project.cpp  project.hpp  qml.qrc  texteditor.cpp  texteditor.hpp  window.cpp  window.hpp
bear/qml/: BearEditor.qml  ProjectSelector.qml  ProjectWindow.qml  Separator.qml
cmake/: FindGMP.cmake  FindMPFR.cmake
comp/: CMakeLists.txt  main.cpp
include/purson/: exception.hpp  expression.hpp  expressions.hpp  lexer.hpp  location.hpp  module.hpp  operator.hpp  parser.hpp  token.hpp  types.hpp
include/purson/expressions/: base.hpp  constant.hpp  function.hpp  literal.hpp  match.hpp  op.hpp  type.hpp  var.hpp
include/purson/types/: .character.hpp.kate-swp  .string.hpp.kate-swp  base.hpp  character.hpp  numeric.hpp  string.hpp
lib/: CMakeLists.txt  lexer.cpp  llvm.cpp  llvm.hpp  module.cpp  operator.cpp  parser.cpp  parser.hpp  types.cpp
lib/compile_llvm/: fn.cpp  var.cpp
lib/parser/: function.cpp  var.cpp
repl/: CMakeLists.txt  main.cpp
syntax/katepart5/syntax/: purson.xml
testing/: calc.pur  dynamic_functions.pur  engine.pur  inheritance.pur  io.pur  simple.pur  types.pur
testing/Fib/: fib.pur  project.bear
testing/Main/: main.pur  project.bear
